Prevent input text from overflowing

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -87,8 +87,10 @@ hr{
     margin-top: 0.8em;
     margin-bottom: 0.3em;
     width: 40ch;
-    height: 2.0em
-    max-width: 80%;
+    height: 1.5em;
+    max-width: 70%;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #user_input{
